mise a jour exos

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -42,17 +42,13 @@
  
 <div id="transi">
         <button onclick="monImage()">Changer image</button>
-    <img class="bottom" src="..//DOM/ex4.jpg" alt="fail" id="uneImage"/>
+    <img class="bottom" src="./ex4.jpg" alt="fail" id="uneImage"/>
     <img class="top" src="ordi.jpg" alt="yo" id="autreImage"/>
 </div>
 
 
 
-
-
-
-  
-    <script>  
+<script>  
 
 
 //ex 3//
@@ -68,14 +64,16 @@ document.getElementById("a").className =  ("maClasse")
 
 
 
-let zzz = document.getElementById("uneImage");
-zzz.onclick=function(){
+    let zzz = document.getElementById("uneImage");
+    zzz.onclick=function(){
     zzz.setAttribute("src" , "ordi.jpg");
     zzz.style.transform= "translate(100px , 0px)";
     zzz.style.border= ("20px solid pink");
     zzz.style.transition = "2s";
     zzz.style.opacity = 0.5;
 }
+
+
 //ex 4 autre//
 // function monImage(){
 //     let x = document.getElementById("uneImage")
@@ -123,34 +121,18 @@ m.onclick = function(){
 }
 
 function change(event, target){
-let evento=event
-target=target
+    event=event
+    target=target
 }
 
 {
 m.addEventListener ("mouseenter", function(e){
     change(e)
-    e.target.style.color = "red";
+    e.target.style.color = "pink";
 })
 
 }
-
-
-
-
-
-
-
-
-
-
-
     </script>
-
-
-
-
-
 
 </body>
 </html>
