--- a/Ajax/exoAjax.html
+++ b/Ajax/exoAjax.html
@@ -14,13 +14,14 @@
         body{
             width: 100vw;
             height: 100vh;
+            background: url('images/from.webp') ;
+            object-fit: fill;
+            background-repeat: repeat;
             display: flex;
             justify-content: flex-end;
             margin:  0;
             padding: 0;
-            background-image: url('fro.webp') ;
-            background-size: 100%;
-            background-repeat: no-repeat;
+            
         
         }
         section{
